xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__integer.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"1\")"
---
Ok(
    Spanned {
        value: Atom(
            Spanned {
                value: Const(
                    Integer(
                        1,
                    ),
                ),
                span: SourceSpan {
                    offset: SourceOffset(
                        0,
                    ),
                    length: SourceOffset(
                        1,
                    ),
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                1,
            ),
        },
    },
)
