xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__let_expr.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"let $x := 1 return 2\")"
---
Ok(
    Let(
        Let {
            name: Name(
                "v0",
            ),
            var_expr: Atom(
                (
                    Const(
                        Integer(
                            1,
                        ),
                    ),
                    10..11,
                ),
            ),
            return_expr: Atom(
                (
                    Const(
                        Integer(
                            2,
                        ),
                    ),
                    19..20,
                ),
            ),
        },
    ),
)
