xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__let_expr_variable.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"let $x := 1 return $x\")"
---
Let(
    Let {
        name: Name(
            "v0",
        ),
        var_expr: Atom(
            Const(
                Integer(
                    1,
                ),
            ),
        ),
        return_expr: Atom(
            Variable(
                Name(
                    "v0",
                ),
            ),
        ),
    },
)
