xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__let_expr_with_add.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"let $x := (1 + 2) return $x\")"
---
Let(
    Let {
        name: Name(
            "v0",
        ),
        var_expr: Binary(
            Binary {
                left: (
                    Const(
                        Integer(
                            1,
                        ),
                    ),
                    11..12,
                ),
                op: Add,
                right: (
                    Const(
                        Integer(
                            2,
                        ),
                    ),
                    15..16,
                ),
            },
        ),
        return_expr: Atom(
            (
                Variable(
                    Name(
                        "v0",
                    ),
                ),
                25..27,
            ),
        ),
    },
)
