xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__multiple_axis_steps.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_xpath(\"child::a/child::b\")"
---
FunctionDefinition(
    FunctionDefinition {
        params: [
            Param(
                Name(
                    "v0",
                ),
            ),
            Param(
                Name(
                    "v1",
                ),
            ),
            Param(
                Name(
                    "v2",
                ),
            ),
        ],
        body: Let(
            Let {
                name: Name(
                    "v3",
                ),
                var_expr: FunctionCall(
                    FunctionCall {
                        atom: Const(
                            Step(
                                Step {
                                    axis: Child,
                                    node_test: NameTest(
                                        Name(
                                            Name {
                                                name: "a",
                                                namespace: None,
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ),
                        args: [
                            Variable(
                                Name(
                                    "v0",
                                ),
                            ),
                        ],
                    },
                ),
                return_expr: Map(
                    Map {
                        context_names: ContextNames {
                            item: Name(
                                "v4",
                            ),
                            position: Some(
                                Name(
                                    "v5",
                                ),
                            ),
                            last: Some(
                                Name(
                                    "v6",
                                ),
                            ),
                        },
                        var_atom: Variable(
                            Name(
                                "v3",
                            ),
                        ),
                        return_expr: FunctionCall(
                            FunctionCall {
                                atom: Const(
                                    Step(
                                        Step {
                                            axis: Child,
                                            node_test: NameTest(
                                                Name(
                                                    Name {
                                                        name: "b",
                                                        namespace: None,
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                args: [
                                    Variable(
                                        Name(
                                            "v4",
                                        ),
                                    ),
                                ],
                            },
                        ),
                    },
                ),
            },
        ),
    },
)
