xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__named_function_ref.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"my_function#2\")"
---
Atom(
    Const(
        StaticFunction(
            StaticFunctionId(
                0,
            ),
        ),
    ),
)
