xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__nested_simple_map_with_context.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"(1, 2) ! (. + 1) ! (. + 2)\")"
---
Ok(
    Let(
        Let {
            name: Name(
                "v2",
            ),
            var_expr: Binary(
                Binary {
                    left: (
                        Const(
                            Integer(
                                1,
                            ),
                        ),
                        SourceSpan {
                            offset: SourceOffset(
                                1,
                            ),
                            length: SourceOffset(
                                1,
                            ),
                        },
                    ),
                    op: Comma,
                    right: (
                        Const(
                            Integer(
                                2,
                            ),
                        ),
                        SourceSpan {
                            offset: SourceOffset(
                                4,
                            ),
                            length: SourceOffset(
                                1,
                            ),
                        },
                    ),
                },
            ),
            return_expr: Let(
                Let {
                    name: Name(
                        "v8",
                    ),
                    var_expr: Map(
                        Map {
                            context_names: ContextNames {
                                item: Name(
                                    "v3",
                                ),
                                position: Name(
                                    "v4",
                                ),
                                last: Name(
                                    "v5",
                                ),
                            },
                            var_atom: (
                                Variable(
                                    Name(
                                        "v2",
                                    ),
                                ),
                                SourceSpan {
                                    offset: SourceOffset(
                                        4,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            ),
                            return_expr: Binary(
                                Binary {
                                    left: (
                                        Variable(
                                            Name(
                                                "v3",
                                            ),
                                        ),
                                        SourceSpan {
                                            offset: SourceOffset(
                                                0,
                                            ),
                                            length: SourceOffset(
                                                0,
                                            ),
                                        },
                                    ),
                                    op: Add,
                                    right: (
                                        Const(
                                            Integer(
                                                1,
                                            ),
                                        ),
                                        SourceSpan {
                                            offset: SourceOffset(
                                                14,
                                            ),
                                            length: SourceOffset(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    return_expr: Map(
                        Map {
                            context_names: ContextNames {
                                item: Name(
                                    "v9",
                                ),
                                position: Name(
                                    "v10",
                                ),
                                last: Name(
                                    "v11",
                                ),
                            },
                            var_atom: (
                                Variable(
                                    Name(
                                        "v8",
                                    ),
                                ),
                                SourceSpan {
                                    offset: SourceOffset(
                                        0,
                                    ),
                                    length: SourceOffset(
                                        26,
                                    ),
                                },
                            ),
                            return_expr: Binary(
                                Binary {
                                    left: (
                                        Variable(
                                            Name(
                                                "v9",
                                            ),
                                        ),
                                        SourceSpan {
                                            offset: SourceOffset(
                                                0,
                                            ),
                                            length: SourceOffset(
                                                0,
                                            ),
                                        },
                                    ),
                                    op: Add,
                                    right: (
                                        Const(
                                            Integer(
                                                2,
                                            ),
                                        ),
                                        SourceSpan {
                                            offset: SourceOffset(
                                                24,
                                            ),
                                            length: SourceOffset(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    ),
)
