xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__path_expr.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"(1, 2) / (. + 1)\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v2",
                ),
                var_expr: Spanned {
                    value: Binary(
                        Binary {
                            left: Spanned {
                                value: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        1,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                            op: Comma,
                            right: Spanned {
                                value: Const(
                                    Integer(
                                        2,
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        4,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            1,
                        ),
                        length: SourceOffset(
                            4,
                        ),
                    },
                },
                return_expr: Spanned {
                    value: Map(
                        Map {
                            context_names: ContextNames {
                                item: Name(
                                    "v3",
                                ),
                                position: Name(
                                    "v4",
                                ),
                                last: Name(
                                    "v5",
                                ),
                            },
                            var_atom: Spanned {
                                value: Variable(
                                    Name(
                                        "v2",
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        1,
                                    ),
                                    length: SourceOffset(
                                        4,
                                    ),
                                },
                            },
                            return_expr: Spanned {
                                value: Binary(
                                    Binary {
                                        left: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v3",
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    0,
                                                ),
                                                length: SourceOffset(
                                                    0,
                                                ),
                                            },
                                        },
                                        op: Add,
                                        right: Spanned {
                                            value: Const(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    14,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        10,
                                    ),
                                    length: SourceOffset(
                                        5,
                                    ),
                                },
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            9,
                        ),
                        length: SourceOffset(
                            7,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                9,
            ),
            length: SourceOffset(
                7,
            ),
        },
    },
)
