xee-xpath/src/snapshots/xee_xpath__ast_ir__tests__postfix_filter.snap
---
source: xee-xpath/src/ast_ir.rs
expression: "convert_expr_single(\"(1, 2)[. gt 2]\")"
---
Let(
    Let {
        name: Name(
            "v2",
        ),
        var_expr: Binary(
            Binary {
                left: (
                    Const(
                        Integer(
                            1,
                        ),
                    ),
                    1..2,
                ),
                op: Comma,
                right: (
                    Const(
                        Integer(
                            2,
                        ),
                    ),
                    4..5,
                ),
            },
        ),
        return_expr: Filter(
            Filter {
                context_names: ContextNames {
                    item: Name(
                        "v3",
                    ),
                    position: Name(
                        "v4",
                    ),
                    last: Name(
                        "v5",
                    ),
                },
                var_atom: (
                    Variable(
                        Name(
                            "v2",
                        ),
                    ),
                    4..5,
                ),
                return_expr: Binary(
                    Binary {
                        left: (
                            Variable(
                                Name(
                                    "v3",
                                ),
                            ),
                            0..0,
                        ),
                        op: Gt,
                        right: (
                            Const(
                                Integer(
                                    2,
                                ),
                            ),
                            12..13,
                        ),
                    },
                ),
            },
        ),
    },
)
